@startuml

title __WEBLAYER's Class Diagram__\n

  package  {
    package webLayer {
      class DateTets {
          {static} + main()
      }
    }
  }
  

  package  {
    package webLayer {
      class Reviews {
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class addFood {
          + FI : String
          + Q : String
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class addStudent {
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class addVendor {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package webLayer {
      class addWorker {
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class adminLogin {
          + adminName : String
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package webLayer {
      class deleteStudent {
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class deleteVendor {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package webLayer {
      class deleteWorker {
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class generateToken {
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class invLogin {
          + adminName : String
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package webLayer {
      class order {
          + FI : String
          + Q : String
          # doPost()
      }
    }
  }
  

  package  {
    package webLayer {
      class userLogin {
          + un : String
          # doPost()
          + getUn()
      }
    }
  }
  

  package  {
    package webLayer {
      class vendorLogin {
          + un : String
          + q : String
          # doPost()
          + getUn()
      }
    }
  }
  

  Reviews -up-|> HttpServlet
  addFood -up-|> HttpServlet
  addStudent -up-|> HttpServlet
  addVendor -up-|> HttpServlet
  addWorker -up-|> HttpServlet
  adminLogin -up-|> HttpServlet
  deleteStudent -up-|> HttpServlet
  deleteVendor -up-|> HttpServlet
  deleteWorker -up-|> HttpServlet
  generateToken -up-|> HttpServlet
  invLogin -up-|> HttpServlet
  order -up-|> HttpServlet
  userLogin -up-|> HttpServlet
  vendorLogin -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
